# piano-hero

./: .gitignore  README.md  README.rst  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  tox.ini
docs/source/: conf.py  index.rst
piano_hero/: application.py
src/piano_hero/: config.py  main.py
src/piano_hero.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/piano_hero/objects/: button.py  object.py  text.py
src/piano_hero/scenes/: config.py  game.py  main_menu.py  scene.py  scenes.py  settings.py
src/piano_hero/utils/: event_handler.py  midi_control.py  save.py  utils.py
