[tool.poetry]
name = "piano-hero"
version = "0.1.0"
description = ""
authors = ["AydenClay96 <aydenclay1996@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mido = "^1.3.2"
pygame = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
