[tool.poetry]
name = "piano-hero"
version = "0.1.0"
description = "GuitarHero but for Piano"
authors = ["Ayden Clay"]
license = "The Unlicense"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.0"
pathlib = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
