[metadata]
name = piano_hero
version = 0.0.1
license = UnLicense
description = GuitarHero for Piano
long_description = file: README.rst
author = Ayden Clay
author_email = AydenClay1996@gmail.com
classifiers=
   Development Status :: 1 - Planning
   Programming Language :: Python
   Topic :: Games/Entertainment :: Arcade

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =

[options.packages.find]
where=src